# Smoothimacker

./: CMakeLists.txt  README.md  imgui.ini  save
assets/shaders/: chunk.frag  chunk.geom  chunk.vert  controlPts.frag  controlPts.vert  cursor.frag  cursor.vert  grid.frag  grid.vert  line.frag  line.vert  pointsLights.frag  pointsLights.vert
cmakeModules/: FindEigen3.cmake  FindSDL2.cmake
doc/: CMakeLists.txt  Doxyfile-html.cmake  Doxyfile.in
doc/doxygen/html/: _app_8hpp_source.html  _app_settings_8hpp_source.html  _camera_8hpp_source.html  _chunk_8hpp_source.html  _control_pts_8hpp_source.html  _cursor_8hpp_source.html  _element_buffer_8hpp_source.html  _grid_8hpp_source.html  _i_app_8hpp_source.html  _icons_font_awesome5_8h_source.html  _list_linked_octree_8hpp_source.html  _menu_8hpp_source.html  _points_lights_8hpp_source.html  _radial_basis_function_8hpp_source.html  _s_d_l_win_wrapper_8hpp_source.html  _shader_8hpp_source.html  _tool_8hpp_source.html  _vertex_array_8hpp_source.html  _vertex_buffer_8hpp_source.html  _voxel_octree_8hpp_source.html  annotated.html  class_app-members.html  class_app.html  class_app_settings-members.html  class_app_settings.html  class_i_app-members.html  class_i_app.html  classes.html  classgui_1_1_menu-members.html  classgui_1_1_menu.html  classgui_1_1_tool-members.html  classgui_1_1_tool.html  classopen_g_l_1_1_element_buffer-members.html  classopen_g_l_1_1_element_buffer.html  classopen_g_l_1_1_s_d_l_win_wrapper-members.html  classopen_g_l_1_1_s_d_l_win_wrapper.html  classopen_g_l_1_1_shader-members.html  classopen_g_l_1_1_shader.html  classopen_g_l_1_1_vertex_array-members.html  classopen_g_l_1_1_vertex_array.html  (+40 more)
doc/doxygen/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  (+9 more)
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
src/: App.cpp  App.hpp  AppSettings.cpp  AppSettings.hpp  IApp.cpp  IApp.hpp  Smoothimacker.cpp  Test.cpp
src/gui/: Menu.cpp  Menu.hpp  Tool.cpp  Tool.hpp
src/gui/toolStrategies/: CreateStrategy.cpp  CreateStrategy.hpp  DeleteStrategy.cpp  DeleteStrategy.hpp  DigStrategy.cpp  DigStrategy.hpp  ExtrudeStrategy.cpp  ExtrudeStrategy.hpp  IToolStrategy.cpp  IToolStrategy.hpp  PaintStrategy.cpp  PaintStrategy.hpp
src/imath/: RadialBasisFunction.cpp  RadialBasisFunction.hpp  Ray.cpp  ray.hpp  util.hpp
src/openGL/: ElementBuffer.cpp  ElementBuffer.hpp  Line.cpp  Line.hpp  SDLWinWrapper.cpp  SDLWinWrapper.hpp  Shader.cpp  Shader.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp  gl-exception.cpp  glException.hpp
src/world/: Camera.cpp  Camera.hpp  Chunk.cpp  Chunk.hpp  ControlPts.cpp  ControlPts.hpp  Cursor.cpp  Cursor.hpp  Grid.cpp  Grid.hpp  ListLinkedOctree.hpp  Octree.hpp  Octree.hpp.save  OctreeIterator.hpp  PointsLights.cpp  PointsLights.hpp  VoxelOctree.cpp  VoxelOctree.hpp
